# serializer version: 1
# name: test_invalid_patient
  dict({
    'issue': list([
      dict({
        'code': 'exception',
        'details': dict({
          'coding': list([
            dict({
              'code': 'invalid',
              'display': 'Invalid Content',
              'system': 'http://hl7.org/fhir/issue-type',
            }),
          ]),
        }),
        'diagnostics': 'Invalid patient number 9999999993',
        'severity': 'error',
      }),
    ]),
    'resourceType': 'OperationOutcome',
  })
# ---
# name: test_multiple_cancelled_search_patient_details
  dict({
    'resource': dict({
      'author': list([
        dict({
          'identifier': dict({
            'system': 'https://fhir.nhs.uk/Id/ods-organization-code',
            'value': 'H81109',
          }),
        }),
      ]),
      'content': list([
        dict({
          'attachment': dict({
            'contentType': 'application/pdf',
            'creation': '2023-01-01',
            'language': 'en-GB',
            'title': '1of1_Lloyd_George_Record_[Holly Lorna MAGAN]_[9449305943]_[29-05-2006].pdf',
          }),
        }),
      ]),
      'custodian': dict({
        'identifier': dict({
          'system': 'https://fhir.nhs.uk/Id/ods-organization-code',
          'value': 'H81109',
        }),
      }),
      'docStatus': 'cancelled',
      'resourceType': 'DocumentReference',
      'status': 'current',
      'subject': dict({
        'identifier': dict({
          'system': 'https://fhir.nhs.uk/Id/nhs-number',
          'value': '9449305943',
        }),
      }),
      'type': dict({
        'coding': list([
          dict({
            'code': '16521000000101',
            'display': 'Lloyd George record folder',
            'system': 'http://snomed.info/sct',
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_multiple_cancelled_search_patient_details.1
  dict({
    'resource': dict({
      'author': list([
        dict({
          'identifier': dict({
            'system': 'https://fhir.nhs.uk/Id/ods-organization-code',
            'value': 'H81109',
          }),
        }),
      ]),
      'content': list([
        dict({
          'attachment': dict({
            'contentType': 'application/pdf',
            'creation': '2023-01-01',
            'language': 'en-GB',
            'title': '1of1_Lloyd_George_Record_[Holly Lorna MAGAN]_[9449305943]_[29-05-2006].pdf',
          }),
        }),
      ]),
      'custodian': dict({
        'identifier': dict({
          'system': 'https://fhir.nhs.uk/Id/ods-organization-code',
          'value': 'H81109',
        }),
      }),
      'docStatus': 'cancelled',
      'resourceType': 'DocumentReference',
      'status': 'current',
      'subject': dict({
        'identifier': dict({
          'system': 'https://fhir.nhs.uk/Id/nhs-number',
          'value': '9449305943',
        }),
      }),
      'type': dict({
        'coding': list([
          dict({
            'code': '16521000000101',
            'display': 'Lloyd George record folder',
            'system': 'http://snomed.info/sct',
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_no_records
  dict({
    'issue': list([
      dict({
        'code': 'exception',
        'details': dict({
          'coding': list([
            dict({
              'code': 'not-found',
              'display': 'Not Found',
              'system': 'http://hl7.org/fhir/issue-type',
            }),
          ]),
        }),
        'diagnostics': 'Document reference not found',
        'severity': 'error',
      }),
    ]),
    'resourceType': 'OperationOutcome',
  })
# ---
# name: test_search_patient_details
  dict({
    'resource': dict({
      'author': list([
        dict({
          'identifier': dict({
            'system': 'https://fhir.nhs.uk/Id/ods-organization-code',
            'value': 'H81109',
          }),
        }),
      ]),
      'content': list([
        dict({
          'attachment': dict({
            'contentType': 'application/pdf',
            'creation': '2023-01-01',
            'language': 'en-GB',
            'title': '1of1_Lloyd_George_Record_[Holly Lorna MAGAN]_[9449305943]_[29-05-2006].pdf',
          }),
        }),
      ]),
      'custodian': dict({
        'identifier': dict({
          'system': 'https://fhir.nhs.uk/Id/ods-organization-code',
          'value': 'H81109',
        }),
      }),
      'docStatus': 'final',
      'resourceType': 'DocumentReference',
      'status': 'current',
      'subject': dict({
        'identifier': dict({
          'system': 'https://fhir.nhs.uk/Id/nhs-number',
          'value': '9449305943',
        }),
      }),
      'type': dict({
        'coding': list([
          dict({
            'code': '16521000000101',
            'display': 'Lloyd George record folder',
            'system': 'http://snomed.info/sct',
          }),
        ]),
      }),
    }),
  })
# ---
